--- a/PasswordNote/Base.lproj/Main.storyboard
+++ b/PasswordNote/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.19" systemVersion="16F2073" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dp4-TV-LAD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.19" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dp4-TV-LAD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,18 +12,49 @@
         <!--密钥笔记-->
         <scene sceneID="eWv-18-5MG">
             <objects>
-                <tableViewController id="ejj-Lp-iEC" customClass="AllCardTableViewController" customModule="PasswordNote" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="oNM-Gk-YD6">
+                <tableViewController id="ejj-Lp-iEC" customClass="MainTableViewController" customModule="PasswordNote" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="143" sectionHeaderHeight="28" sectionFooterHeight="28" id="oNM-Gk-YD6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="2CS-73-lPN">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="kMainCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="kMainCell" rowHeight="143" id="2CS-73-lPN" customClass="MainTableViewCell" customModule="PasswordNote" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="143"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2CS-73-lPN" id="l2e-tv-YIN">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2CS-73-lPN" id="l2e-tv-YIN">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="143"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dqh-JO-U87">
+                                            <rect key="frame" x="17" y="12" width="341" height="119"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="招商银行信用卡" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YZb-Gu-MXL">
+                                                    <rect key="frame" x="15" y="15" width="170.5" height="29"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="YZb-Gu-MXL" firstAttribute="leading" secondItem="dqh-JO-U87" secondAttribute="leading" constant="15" id="Q8y-Yc-Nhl"/>
+                                                <constraint firstItem="YZb-Gu-MXL" firstAttribute="top" secondItem="dqh-JO-U87" secondAttribute="top" constant="15" id="kGS-Wt-2Me"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                    <real key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="isShowShadow" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="dqh-JO-U87" secondAttribute="trailing" constant="17" id="51e-bX-Qtr"/>
+                                        <constraint firstItem="dqh-JO-U87" firstAttribute="top" secondItem="l2e-tv-YIN" secondAttribute="top" constant="12" id="GRU-NP-Cx7"/>
+                                        <constraint firstAttribute="bottom" secondItem="dqh-JO-U87" secondAttribute="bottom" constant="12" id="KaE-aE-R6H"/>
+                                        <constraint firstItem="dqh-JO-U87" firstAttribute="leading" secondItem="l2e-tv-YIN" secondAttribute="leading" constant="17" id="y0K-ZI-JNU"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -33,10 +64,54 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="密钥笔记" id="HcO-HR-mqn"/>
+                    <connections>
+                        <segue destination="RiX-uj-wtz" kind="show" identifier="createNote" id="FjS-BS-Eyu"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Mj-n0-vlQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="466" y="248"/>
+        </scene>
+        <!--创建密钥-->
+        <scene sceneID="1ur-Ng-nk5">
+            <objects>
+                <viewController title="创建密钥" id="RiX-uj-wtz" customClass="CreateNoteViewController" customModule="PasswordNote" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ez9-sn-uAt"/>
+                        <viewControllerLayoutGuide type="bottom" id="RLx-pp-mzy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6Om-Y5-RF1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9YY-P9-93T">
+                                <rect key="frame" x="67" y="269.5" width="240" height="128"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="X93-SZ-3E7"/>
+                                    <constraint firstAttribute="width" constant="240" id="urc-0I-OmF"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isShowShadow" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9YY-P9-93T" firstAttribute="centerX" secondItem="6Om-Y5-RF1" secondAttribute="centerX" id="aTG-IU-9vv"/>
+                            <constraint firstItem="9YY-P9-93T" firstAttribute="centerY" secondItem="6Om-Y5-RF1" secondAttribute="centerY" id="oay-Vu-EJK"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="test" destination="9YY-P9-93T" id="Dha-b7-ie6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u7Q-uK-75J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1322" y="248"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Z3P-66-Rdq">
